eks-teste/vpc.tf
#
# VPN Resources
# * VPC
# * Subnets
# * Internet Gateway
# * Route Table
#
resource "aws_vpc" "desafio" {
  cidr_block = "10.0.0.0/16"
  tags = "${
    map(
      "Name", "eks-desafio-node",
      "kubernetes.io/cluster/${var.cluster-name}", "shared",
    )
  }"
}

resource "aws_subnet" "desafio" {
  count             = 2
  availability_zone = "${data.aws_availability_zones.available.names[count.index]}"
  cidr_block        = "10.0.${count.index}.0/24"
  vpc_id            = "${aws_vpc.desafio.id}"
  tags = "${
    map(
      "Name", "eks-desafio-node",
      "kubernetes.io/cluster/${var.cluster-name}", "shared",
    )
  }"
}

resource "aws_internet_gateway" "desafio" {
  vpc_id = "${aws_vpc.desafio.id}"
  tags = {
    Name = "eks-desafio"
  }
}

resource "aws_route_table" "desafio" {
  vpc_id = "${aws_vpc.desafio.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.desafio.id}"
  }
}
resource "aws_route_table_association" "desafio" {
  count          = 2
  subnet_id      = "${aws_subnet.desafio.*.id[count.index]}"
  route_table_id = "${aws_route_table.desafio.id}"
}
